# ffdice

./: CONTRIBUTING.md  LICENSE  README.md  abstract.py  main.py  pyproject.toml
.github/workflows/: main.yml
examples/basic/: README.md  __main__.py  example.py
examples/colors/: README.md  __main__.py
examples/sensehat/: README.md  __main__.py
inc/: ColorDie.py  Die.py  LED.py  LED_alt.py  RNG.py  _matrix.py  led_matrix.py
src/: Dice.py  Die.py  RNG.py
tests/: test_dice.py  test_die.py
