[project]
name = "rpi-dice"
version = "0.1.0"
authors = [
  { name="FrisFruitig", email="info@frisfruitig.com" },
]
description = "A simple application to roll dice on a Raspberry Pi with the Sense Hat led matrix."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Other OS",
]

[project.urls]
"Homepage" = "https://github.com/frisfruitig/rpi-dice"
"Bug Tracker" = "https://github.com/frisfruitig/rpi-dice/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"