[project]
name = "PyDice"
version = "1.0.0"
authors = [
  { name="FrisFruitig", email="info@frisfruitig.com" },
]
description = "A basic random number generator (RNG) that can be used for multiple purposes, such as rolling dice."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/frisfruitig/pydice"
"Bug Tracker" = "https://github.com/frisfruitig/pydice/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"